--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
-        "vue-router": "^4.2.5"
+        "vee-validate": "^4.12.4",
+        "vue-router": "^4.2.5",
+        "yup": "^1.3.3"
     }
 }
