--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.5.1",
         "vee-validate": "^4.12.4",
         "vue-router": "^4.2.5",
         "yup": "^1.3.3"
