--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.5.1",
+        "lottie-web": "^5.12.2",
+        "moment": "^2.30.1",
         "vee-validate": "^4.12.4",
         "vue-router": "^4.2.5",
+        "vue3-lottie": "^3.2.0",
         "yup": "^1.3.3"
     }
 }
